# delight-web

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  README.md  docker-compose-dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260513_0001_initial_schema.py  20260514_0002_media_focal_and_placeholder.py  20260515_0003_backfill_search_vector.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: __init__.py  auth.py  engagement.py  health.py  media.py  posts.py  public.py  taxonomy.py
apps/api/app/core/: config.py  db.py  errors.py  logging.py  sanitize.py  security.py  slug.py
apps/api/app/infra/db/: __init__.py  base.py  events.py
apps/api/app/infra/db/models/: __init__.py  auth.py  content.py  engagement.py  system.py  users.py
apps/api/app/schemas/: auth.py  engagement.py  posts.py  public.py
apps/api/app/services/: analytics.py  audit.py  auth.py  comments.py  media.py  posts.py  public.py  revalidate.py  sessions.py  subscribers.py  taxonomy.py  throttle.py
apps/api/scripts/: seed.py
apps/api/tests/: _factories.py  conftest.py  test_analytics.py  test_auth_authz.py  test_auth_login.py  test_auth_password_reset.py  test_auth_sessions.py  test_comments.py  test_media.py  test_media_signing.py  test_migrations.py  test_posts_autosave.py  test_posts_lifecycle.py  test_public.py  test_sanitize_and_render.py  test_security_primitives.py  test_slug_history.py  test_smoke.py  test_subscribers.py
docs/: deferred.md  perf.md
scripts/: init-db.sql  (+1 more)
(+106 files in other folders)
