[project]
name = "api"
version = "0.0.0"
description = "Delight Web API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.6.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.17",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "nh3>=0.2.18",
    "python-magic>=0.4.27",
    "python-slugify>=8.0.4",
    "cryptography>=43.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.3",
    "types-python-slugify>=8.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "ASYNC", "S", "C4", "PT", "RET"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
"alembic/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions", "build", ".venv"]

[[tool.mypy.overrides]]
module = ["magic.*", "pyotp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -ra"
filterwarnings = ["error"]
